<resources>
    <string name="app_name">MenuValidateTest</string>
    <string name="menu_test">Menu Test</string>
    <string name="serverType">ServerType</string>
    <string name="languageCode">languageCode</string>
    <string name="confirm">확인</string>
    <string name="version">버전</string>
    <string name="Region">Region</string>
    <string name="device">Device</string>


    <string name="home_fragment">Home Fragment</string>
    <string name="sport_fragment">Sport Fragment</string>
    <string name="movie_fragment">Movie Fragment</string>

</resources>
